# whuse

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md  REDIRECT_PTS7_TO_RV_LTP.sh  RV_LTP_TIMERFD_ACTION.sh  cargo_config.toml  rust-toolchain.toml
.cargo/: config.toml
.claude/: ralph-loop.local.md
api/src/: task.rs
api/src/file/: fs.rs  net.rs
api/src/syscall/: mod.rs  resources.rs  signal.rs  sys.rs  time.rs
api/src/vfs/: proc.rs  tmp.rs
core/src/: task.rs
crates/fs-ext4/: Cargo.toml
crates/fs-ext4/src/: lib.rs
crates/hal-api/: Cargo.toml
crates/hal-api/src/: lib.rs
crates/hal-loongarch64-virt/: Cargo.toml
crates/hal-loongarch64-virt/src/: lib.rs
crates/hal-riscv64-virt/: Cargo.toml
crates/hal-riscv64-virt/src/: lib.rs
crates/hal-virtio/: Cargo.toml
crates/hal-virtio/src/: lib.rs
crates/kernel-core/: Cargo.toml  build.rs
crates/kernel-core/src/: lib.rs  lib_loongarch.inc.rs  lib_riscv.inc.rs
crates/mm/: Cargo.toml
crates/mm/src/: lib.rs
crates/proc/: Cargo.toml
crates/proc/src/: lib.rs
crates/syscall/: Cargo.toml
crates/syscall/src/: fs_domain.rs  io_mpx_domain.rs  ipc_domain.rs  lib.rs  mm_domain.rs  net_domain.rs  resources_domain.rs  signal_domain.rs  sys_domain.rs  task_domain.rs  time_domain.rs
crates/task/: Cargo.toml
crates/task/src/: lib.rs
crates/user-init/: Cargo.toml  build.rs
crates/user-init/src/: lib.rs
crates/vfs/: Cargo.toml
crates/vfs/src/: lib.rs
docs/superpowers/plans/: 2026-03-26-oscomp-real-score.md  2026-03-28-iozone-libcbench-lmbench-fix.md  2026-03-28-ltp-score-fix.md  2026-03-28-oscomp-maximize-score.md  2026-03-30-cow-fork-implementation.md  2026-04-06-ltp-regression-fix-and-expansion.md  2026-04-07-glibc-rv-ltp-aggressive-expansion.md  2026-04-07-loongarch-busybox-implementation.md
docs/superpowers/specs/: 2026-03-30-cow-fork-design.md  2026-04-07-glibc-rv-ltp-aggressive-expansion-design.md  2026-04-07-loongarch-busybox-design.md
platform/loongarch64-bootrom/: Cargo.toml  build.rs  linker.ld
platform/loongarch64-bootrom/src/: entry.S  main.rs
platform/loongarch64-virt/: Cargo.toml  build.rs  linker.ld
platform/loongarch64-virt/src/: entry.S  main.rs
platform/riscv64-virt/: Cargo.toml  linker.ld
platform/riscv64-virt/src/: entry.S  main.rs
src/test/: pre.sh
tools/dev/: cleanup_stale_qemu.sh  generate_ltp_image_rounds.py  refresh_ltp_image_bins.py  refresh_ltp_reference_seeds.py  run_ltp_rv_batch_round.sh  run_oscomp_stage1.sh  run_oscomp_stage2.sh  run_oscomp_stage2_3x.sh  setup_parallel_worktrees.sh  test_loongarch_basic_boot.sh  test_ltp_expansion_workflows.sh  test_run_oscomp_stage2.sh
tools/oscomp/ltp/: curated_blacklist_glibc_rv.txt  curated_whitelist_glibc_la.txt  curated_whitelist_glibc_rv.txt  curated_whitelist_musl_la.txt  musl_rv_batch_file_syscalls.txt  musl_rv_batch_memory.txt  musl_rv_batch_open_io.txt  musl_rv_batch_path.txt  musl_rv_batch_stat.txt  (+66 more)
tools/xtask/: Cargo.toml
(+19 files in other folders)
