[workspace]
members = [
    "tools/xtask",
    "platform/riscv64-virt",
    "platform/loongarch64-bootrom",
    "platform/loongarch64-virt",
    "crates/hal-api",
    "crates/hal-virtio",
    "crates/hal-riscv64-virt",
    "crates/hal-loongarch64-virt",
    "crates/kernel-core",
    "crates/mm",
    "crates/task",
    "crates/proc",
    "crates/vfs",
    "crates/fs-ext4",
    "crates/syscall",
    "crates/user-init",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT OR Apache-2.0"
authors = ["Codex"]

[workspace.dependencies]
spin = "0.9"
ext4-view = { version = "0.9.3", default-features = false }
fdt = "0.2.0-alpha1"
virtio-drivers = "0.13.0"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
