[package]
name = "syscall"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
hal-api = { path = "../hal-api" }
mm = { path = "../mm" }
proc = { path = "../proc" }
task = { path = "../task" }
user-init = { path = "../user-init" }
vfs = { path = "../vfs" }
spin.workspace = true
