[package]
name = "whuse-loongarch64-virt"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
hal-loongarch64-virt = { path = "../../crates/hal-loongarch64-virt" }
hal-api = { path = "../../crates/hal-api" }
kernel-core = { path = "../../crates/kernel-core" }
spin = "0.9"

[[bin]]
name = "whuse-loongarch64-virt"
path = "src/main.rs"
test = false
